# aiot-platform-baseline

./: .gitignore  LICENSE  README.md
adaptive-api/python/: __init__.py  common.py  config.py  requirements.txt
adaptive-api/python/ftp_handler/: aws.py  ftp.py
adaptive-api/python/message_broker/: mq_config.py  rabbitmq.py
aiml-inference/: .env  main.py
aiml-inference/message_broker/: mq_config.py  rabbitmq.py
aiml-inference/yolo_engine/: config.py  yolo.py
docs/: research_notes.md
docs/mq-msg/: notification.json  object.json  sensor.json
microservices/device_management/: .env  Dockerfile  accepted_msg.json  device_registry.py  entrypoint.sh  registry_msg.json  requirements.txt
microservices/messages_delivery/: .env  README.md  main.py  requirements.txt
microservices/messages_delivery/samples/: inp_mod_msg.json  inp_sen_msg.json
microservices/model_messages_generator/: .env  Dockerfile  README.md  credentials.json  entrypoint.sh  main.py  requirements.txt  sample_model_msg.json  test.py
microservices/model_messages_generator/lib/: ftp.py  minio.py  minio_v2.py
microservices/notification_messages_generator/: README.md
microservices/others/: README.md
microservices/others/alerts_trigger/: CMakeLists.txt  alert_trigger.service  main.cpp
microservices/others/gps_updater/: .env  Dockerfile  README.md  entrypoint.sh  gps_updater.py  requirements.txt
microservices/sensor_messages_generator/: .env  README.md  main.py  requirements.txt
microservices/sensor_preprocessing/: CMakeLists.txt  README.md  gps.json
microservices/sensor_preprocessing/services/: gps.service  guva_s12sd.service  ltr390.service  pms5003.service  scd41.service
microservices/sensor_preprocessing/src/: gps.cpp  gps.json  guva-s12sd.cpp  ltr390.cpp  pms5003.cpp  scd41.cpp
microservices/sensor_preprocessing/unit_test/: guva-s12sd.cpp  pms5003.cpp  scd41.cpp
microservices/sensor_preprocessing/unit_test/mqtt/: CMakeLists.txt  async_pub.cpp  async_sub.cpp
microservices/workflow_management/: .env  entrypoint.sh  requirements.txt  workflow.py
microservices/workflow_management/sample_msg/: detection_range.json  detection_timer.json  sensor_limit.json
self-hosted/: README.md
test/random-messages/: rabbitmq-pub.py
test/webrtc-test/: index.html  ovenplayer.js.map
test/webrtc-test/OvenPlayer-0.10.37/: package-lock.json
test/webrtc-test/certs/: cert.pem  key.pem
test/webrtc-test/certs/new/: certfile.crt  keyfile.key  request.csr
